--- a/semana10/futureX/package.json
+++ b/semana10/futureX/package.json
@@ -6,10 +6,12 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "3.9.3",
+    "@material-ui/icons": "^4.9.1",
     "axios": "0.19.0",
     "connected-react-router": "^6.5.2",
     "history": "4.10.1",
     "react": "^16.8.6",
+    "react-country-region-selector": "^2.1.0",
     "react-dom": "16.8.6",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
