--- a/semana10/futureX/package.json
+++ b/semana10/futureX/package.json
@@ -10,12 +10,14 @@
     "axios": "0.19.0",
     "connected-react-router": "^6.5.2",
     "history": "4.10.1",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-country-region-selector": "^2.1.0",
     "react-dom": "16.8.6",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
+    "react-select-country-list": "^2.1.2",
     "redux": "4.0.4",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.1"
