--- a/semana14/projeto-sistema-bancario/package.json
+++ b/semana14/projeto-sistema-bancario/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^13.7.7",
+    "moment": "^2.26.0",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
