--- a/semana17/todo-list-projeto/package.json
+++ b/semana17/todo-list-projeto/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "4.17.0",
     "knex": "^0.21.1",
+    "moment": "^2.26.0",
     "mysql": "^2.18.1",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
