exercicio 2, terça, semana 3, projeto curie

--- a/logic-exercises/package.json
+++ b/logic-exercises/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node ./node_modules/jest/bin/jest.js",
-    "dev": "ts-node-dev --no-notify --ignore-watch node_modules ./src/exercicio5.ts",
-    "start": "tsc && node ./build/src/exercicio6.js"
+    "dev": "ts-node-dev --no-notify --ignore-watch node_modules ./src/exercicio2-semana3.ts",
+    "start": "tsc && node ./build/src/exercicio2-semana3.js"
   },
   "author": "",
   "license": "ISC",
